pod-all-options.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: dev                      # assign pod to namespace dev
  labels:
    app: myapp
spec:
  containers:                         # create container with two services
    - name: nginx-container
      image: nginx
      args: ["10"]                   # argument passed to container - overwrite CMD command in docker file
      command: [" sleeper2.0"]       # overwrite ENTRYPOINT argument in docker file
      volumeMounts:                                       # mount volume created below to /opt
        - mountPath: /opt
          name: data-volume
    - name: redis
      image: redis
      commands:                      # passing commands to pod
        - "sleep"
        - "5000"
      env:                          # setting env inside container
        - name: APP_COLOR
          value: pink
      envFrom:                      # apply variables from configMap file
      - configMapRef:
          name: app-config
      env:                          # getting one variable from ConfigMap
        - name: NAME
          valeFrom:
            configMapRef:
              name: VALUE_NAME
      envFrom:                      # getting values from secrets ( other options the same as above for configmap)
      - secretRef:
          name: secret-name
    scheduler: my-custom-scheduler    # decide what scheduler will ake care of pod

  nodeName: node02                    # assign pod to be attached to node2
    resources:
      request:                        # assign hardware resources to pod
        memory: "1Gi"
        cpu: 1
      limits:                         # specify how many resources can pod max consume
        memory: "2Gi"
        cpu: 2
  tolerations:                        # tolerations - define values for scheduling pods to nodes (taints)
    - key: "app"
      operator: "Equal"
      value: "blue"
      effect: " NoSchedule"
  nodeSelector:
    size: Large                       # setting pod to node based on Large label of node ( nodes must be label first)

  volumes:                                    # create volume on local host ( not recommended on multi-node k8s because pods will use /data on local nodes - data can differ between hosts)
    - name: data-volume
      hostPath:
        path: /data
        type: Directory
    - name: data-volume-aws                 # volume on AWS (better solution for multi-node k8s - one storage to all podsacross all nodes )
      awsElasticBlockStore:
        volumeID: <volume-id>
        fsType: ext4
