pod-with-scheduler.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx
  nodeName: node02                      # assign pod to be attached to node2
