static-pod.yml
#static pod is a pod that ca nbe run only when node is available ( no master, no scheduler, no api)
# store pod  definitoin file in /etc/kubernetes/manifests (could be any directory)
# then update kubelet service configuration
#		Ps -aux | grep kubelet    and find where kubelet configuration in stored  (--config=/var/lib/kubelet/config.yaml)
#
#		master $ ps -aux | grep kubelet
#		root      3470  4.3  4.6 699648 95660 ?        Ssl  12:26   1:01 /usr/bin/kubelet --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf --kubeconfig=/etc/kubernetes/kubelet.conf--config=/var/lib/kubelet/config.yaml --cgroup-driver=systemd --network-plugin=cni --pod-infra-container-image=k8s.gcr.io/pause:3.1
#		root      3917  4.8 14.9 549804 306788 ?       Ssl  12:26   1:08 kube-apiserver --advertise-address=172.17.0.8 --allow-privileged=true --authorization-mode=Node,RBAC --client-ca-file=/etc/kubernetes/pki/ca.crt --enable-admission-plugins=NodeRestriction --enable-bootstrap-token-auth=true --etcd-cafile=/etc/kubernetes/pki/etcd/ca.crt --etcd-certfile=/etc/kubernetes/pki/apiserver-etcd-client.crt --etcd-keyfile=/etc/kubernetes/pki/apiserver-etcd-client.key --etcd-servers=https://127.0.0.1:2379 -- [...]

#Check in kubelet config file    /var/lib/kubelet/config.yaml      where static pods are stored  "staticPodPath: /etc/kubernetes/manifests "
#Create pod and store in static pods path -   /etc/kubernetes/manifests/           automatically will be running


#  names with "-master" while listing pods are static pods eg.  kube-apiserver-master

apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
    - name: nginx-container
      image: nginx
    - name: backend-container
      image: redis
