service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type:  NodePort
  ports:
    - targetPort: 80             # port which we would like to reach on pod
      port: 80                   # port of service from service point of view
      nodePort: 3008             # port of Kube node - port we use eg in webbrowser
